syntax = "proto3";
import "google/protobuf/struct.proto";
option go_package = "tdproxy/protos";
package protos;

message Option {
  string symbol = 1;
  string date_string = 2;
  string price_string = 3;
  bool is_call = 4;
  double strike_price = 5;
  double ask_price = 6;
  double bid_price = 7;
  double mark_price = 8;
  int32 open_interest = 9;
  double delta = 10;
  double multiplier = 11;
  google.protobuf.Struct info = 12;
}

message Chain {
  string symbol = 1;
  string date = 2;
  bool is_call = 3;
  string last_refreshed_at = 4;
  repeated Option options = 5;
  map<string, Option> options_by_price = 6;
}

service ChainService {
  rpc GetChainInfo(GetChainInfoRequest) returns (stream GetChainInfoResponse) {}
  rpc GetChain(GetChainRequest) returns (GetChainResponse) {}
}

message GetChainInfoRequest {
  repeated string symbols = 1;

  /**
   * MAX_INT effective means never refresh
   * <= 0 => Always refresh
   * Any other value indicates to only refresh if last refresh
   * was before this threshold.
   */
  optional int32 refresh_type = 2;
}

message GetChainInfoResponse {
  string symbol = 1;
  repeated string dates = 2;
  string last_refreshed_at = 3;
  int32 error_code = 4;
  string error_message = 5;
}

message GetChainRequest {
  string symbol = 1;

  /**
   * Return the chain on a particular date.
   */
  string date = 2;

  /**
   * Get the call or put chain
   */
  bool is_call = 3;

  /**
   * MAX_INT effective means never refresh
   * <= 0 => Always refresh
   * Any other value indicates to only refresh if last refresh
   * was before this threshold.
   */
  optional int32 refresh_type = 4;
}

message GetChainResponse {
  optional string error_message = 1;
  Chain chain = 2;
}

