syntax = "proto3";
// import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";
option go_package = "tdproxy/protos";
package protos;

message Ticker {
  string symbol = 1;
  string last_refreshed_at = 2;
  google.protobuf.Struct info = 3;
}

service TickerService {
  rpc GetTickers(GetTickersRequest) returns (GetTickersResponse) {}
}

message GetTickersRequest {
  repeated string symbols = 1;
  /**
   * MAX_INT effective means never refresh
   * <= 0 => Always refresh
   * Any other value indicates to only refresh if last refresh
   * was before this threshold.
   */
  optional int32 refresh_type = 2;
}

message GetTickersResponse {
  bool status = 1;
  map<string, Ticker> tickers = 2;
  map<string, string> errors = 3;
}
